--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ add_definitions(
         -DMOCK_SIGN
 	-DENABLE_HOTSTUFF
 	-DDISABLE_GENESIS_BLS_VERIFY
-	#-DTEST_NO_CROSS
+	-DTEST_NO_CROSS
 	-DUSE_AGG_BLS
 	-DXUFEI
 	-DUSE_TC
