--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ add_definitions(
 	-DENABLE_HOTSTUFF
 	-DDISABLE_GENESIS_BLS_VERIFY
 	-DTEST_NO_CROSS
-	-DUSE_AGG_BLS
+	#-DUSE_AGG_BLS
 	-DXUFEI
 	-DUSE_TC
 )
