--- a/src/security/CMakeLists.txt
+++ b/src/security/CMakeLists.txt
@@ -5,7 +5,7 @@ aux_source_directory(./ecdsa ecdsa_src)
 aux_source_directory(./gmssl gmssl_src)
 add_library(security STATIC ${gmssl_src} ${ecdsa_src} ${security_src} )
 
-target_link_libraries(security PRIVATE common ssl crypto secp256k1)
+target_link_libraries(security PRIVATE common ssl crypto secp256k1 gmssl)
 if (XENABLE_CODE_COVERAGE)
     target_link_libraries(security PRIVATE gcov)
 endif()
