--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,11 +104,11 @@ add_definitions(
     #-DARMEABI_V7A
     #-DLATENCY
     #-DHOTSTUFF_TEST
-    -DMOCK_VERIFY
-    -DMOCK_SIGN
+    #-DMOCK_VERIFY
+    #-DMOCK_SIGN
     -DENABLE_HOTSTUFF
     -DDISABLE_GENESIS_BLS_VERIFY
-    -DTEST_NO_CROSS
+    #-DTEST_NO_CROSS
     #-DUSE_AGG_BLS
 )
 
