--- a/src/bls/tests/CMakeLists.txt
+++ b/src/bls/tests/CMakeLists.txt
@@ -6,4 +6,30 @@ aux_source_directory(./ bls_test_src)
 add_executable(bls_test ${bls_test_src})
 
 add_dependencies(bls_test bls)
-target_link_libraries(bls_test PRIVATE bls network gtest gtest_main gmock gmock_main pthread dl OpenSSL::SSL OpenSSL::Crypto)
+find_package(OpenSSL REQUIRED)
+target_link_libraries(bls_test PRIVATE bls network gtest gtest_main gmock gmock_main network
+    init
+    consensus
+    sync
+    zjcvm
+    block
+    vss
+    ck
+    elect
+    timeblock
+    pools
+    broadcast
+    dht
+    transport
+    websocket
+    http
+    contract
+    pki
+    big_num
+    db
+    security
+    common
+    protos
+    tcmalloc
+    pthread
+    gmp)
