--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ add_definitions(
     #-DARMEABI_V7A
     #-DLATENCY
     #-DHOTSTUFF_TEST
+    -DUSE_SERVER_TEST_TRANSACTION
     -DMOCK_VERIFY
     -DMOCK_SIGN
     -DENABLE_HOTSTUFF
