--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,8 +104,9 @@ add_definitions(
     #-DLATENCY
     #-DHOTSTUFF_TEST
     -DUSE_SERVER_TEST_TRANSACTION
-    -DMOCK_VERIFY
-    -DMOCK_SIGN
+    -DTEST_FORKING_ATTACK
+    #-DMOCK_VERIFY
+    #-DMOCK_SIGN
     -DENABLE_HOTSTUFF
     -DDISABLE_GENESIS_BLS_VERIFY
     -DTEST_NO_CROSS
