--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,7 @@ add_definitions(
     #-DLATENCY
     #-DHOTSTUFF_TEST
     -DUSE_SERVER_TEST_TRANSACTION
-    -DTEST_FORKING_ATTACK
+    #-DTEST_FORKING_ATTACK
     #-DMOCK_VERIFY
     #-DMOCK_SIGN
     -DENABLE_HOTSTUFF
