--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,7 +166,7 @@ set(LINK_ARGS
     broadcast
     dht
     transport
-    websocket
+    # websocket
     http
     contract
     pki
@@ -192,8 +192,8 @@ target_link_libraries(blsmain ${LINK_ARGS})
 target_link_libraries(zjchain ${LINK_ARGS})
 target_link_libraries(httpc http common tcmalloc pthread gmp)
 target_link_libraries(https http common tcmalloc pthread gmp)
-target_link_libraries(wsc websocket common tcmalloc pthread gmp)
-target_link_libraries(wss websocket common tcmalloc pthread gmp)
+# target_link_libraries(wsc websocket common tcmalloc pthread gmp)
+# target_link_libraries(wss websocket common tcmalloc pthread gmp)
 target_link_libraries(tnetc transport common tcmalloc pthread gmp)
 target_link_libraries(tnets transport common tcmalloc pthread gmp)
 target_link_libraries(txcli http security transport common tcmalloc pthread gmp)
@@ -204,7 +204,7 @@ include_directories(SYSTEM ${SRC_DIR})
 add_subdirectory(${SRC_DIR}/common common)
 add_subdirectory(${SRC_DIR}/http http)
 add_subdirectory(${SRC_DIR}/transport transport)
-add_subdirectory(${SRC_DIR}/websocket websocket)
+# add_subdirectory(${SRC_DIR}/websocket websocket)
 add_subdirectory(${SRC_DIR}/dht dht)
 add_subdirectory(${SRC_DIR}/broadcast broadcast)
 add_subdirectory(${SRC_DIR}/network network)
