--- a/src/security/CMakeLists.txt
+++ b/src/security/CMakeLists.txt
@@ -6,7 +6,7 @@ aux_source_directory(./gmssl gmssl_src)
 aux_source_directory(./oqs oqs_src)
 add_library(security STATIC ${oqs_src} ${gmssl_src} ${ecdsa_src} ${security_src} )
 
-target_link_libraries(security PRIVATE common oqs ssl crypto secp256k1 gmssl)
+target_link_libraries(security PRIVATE common oqs ssl crypto secp256k1 ethash gmssl)
 if (XENABLE_CODE_COVERAGE)
     target_link_libraries(security PRIVATE gcov)
 endif()
