--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,13 +108,13 @@ add_definitions(
     #-DARMEABI_V7A
     #-DLATENCY
     #-DHOTSTUFF_TEST
-    -DUSE_SERVER_TEST_TRANSACTION
+    #-DUSE_SERVER_TEST_TRANSACTION
     #-DTEST_FORKING_ATTACK
-    #-DMOCK_VERIFY
-    #-DMOCK_SIGN
+    -DMOCK_VERIFY
+    -DMOCK_SIGN
     -DENABLE_HOTSTUFF
-    -DDISABLE_GENESIS_BLS_VERIFY
-    -DTEST_NO_CROSS
+    #-DDISABLE_GENESIS_BLS_VERIFY
+    #-DTEST_NO_CROSS
     #-DUSE_AGG_BLS
 )
 
