--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,7 +113,7 @@ add_definitions(
     #-DMOCK_VERIFY
     #-DMOCK_SIGN
     -DENABLE_HOTSTUFF
-    #-DDISABLE_GENESIS_BLS_VERIFY
+    -DDISABLE_GENESIS_BLS_VERIFY
     #-DTEST_NO_CROSS
     #-DUSE_AGG_BLS
 )
