--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required(VERSION 3.8)
 aux_source_directory(./ common_src)
 aux_source_directory(./tick tick_src)
 add_library(common STATIC ${common_src} ${tick_src} )
-target_link_libraries(common PRIVATE ssl  protobuf crypto orocos-log4cpp ethash xxhash keccak geolite2++ maxminddb stdc++fs)
+target_link_libraries(common PRIVATE ssl  protobuf crypto orocos-log4cpp ethash xxhash keccak geolite2++ maxminddb)
 
