--- a/ci/conf/zjchain.conf
+++ b/ci/conf/zjchain.conf
@@ -1,8 +1,8 @@
 [db]
 path=./db
 [log]
-path=log/zjchain.log
-[zjchain]
+path=log/shardora.log
+[shardora]
 ip_db_path=../conf/GeoLite2-City.mmdb
 bootstrap=id_1:127.0.0.1:11001
 ck_ip=127.0.0.1
