--- a/zjnodes_local/zjchain/conf/log4cpp.properties
+++ b/zjnodes_local/zjchain/conf/log4cpp.properties
@@ -7,7 +7,7 @@ log4cpp.appender.rootAppender.layout=PatternLayout
 log4cpp.appender.rootAppender.layout.ConversionPattern=%d [%p] %m%n 
 
 log4cpp.appender.programLog=RollingFileAppender
-log4cpp.appender.programLog.fileName=log/zjchain.log
+log4cpp.appender.programLog.fileName=log/shardora.log
 log4cpp.appender.programLog.maxFileSize=1073741824
 log4cpp.appender.programLog.maxBackupIndex=5
 log4cpp.appender.programLog.layout=PatternLayout
