--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,8 +110,8 @@ add_definitions(
     #-DHOTSTUFF_TEST
     #-DUSE_SERVER_TEST_TRANSACTION
     #-DTEST_FORKING_ATTACK
-    #-DMOCK_VERIFY
-    #-DMOCK_SIGN
+    -DMOCK_VERIFY
+    -DMOCK_SIGN
     -DENABLE_HOTSTUFF
     -DDISABLE_GENESIS_BLS_VERIFY
     #-DTEST_NO_CROSS
