--- a/src/consensus/CMakeLists.txt
+++ b/src/consensus/CMakeLists.txt
@@ -5,7 +5,7 @@ aux_source_directory(./zbft zbft_src)
 aux_source_directory(./hotstuff hotstuff_src)
 add_library(consensus STATIC ${consensus_src} ${zbft_src} ${hotstuff_src})
 
-target_link_libraries(consensus PRIVATE timeblock zjcvm elect pools)
+target_link_libraries(consensus PRIVATE sync timeblock zjcvm elect pools sync )
 if (XENABLE_CODE_COVERAGE)
     target_link_libraries(consensus PRIVATE gcov)
 endif()
